# python-docker-image

./: .gitignore  bkp.toml  dockerfile  dockerfile.proposal-link  libreoffice.sh  pyproject.toml  readme.md  requirements-bkp.txt  requirements-proposal.txt  requirements.txt  template.pptx  update_toml.py
.github/workflows/: ci.yaml
