# dependencies to publish to Azure Artifacts
[project]
name = "qd-openapi-api"
requires-python = ">=3.10"
version = "0.2.0"
authors = [{name = 'Carlos Rian', email = 'carlos.rian@quartile.com'}]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: FastAPI",
    "Framework :: IPython",
]

dynamic = ["license", "readme", "description", "dependencies", "classifiers"]
description = "OpenAPI API for Quartile, a package for building REST APIs with Python 3.10+."

[tool.setuptools.dynamic]
dependencies = {file = ["requirements-publish.txt"]}

# project dependencies
[tool.poetry]
name = "qd-openapi-api"
version = "0.2.0"
description = "Extenal API Quartile"
authors = ["carlos.rian <carlos.rian@quartile.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# installing dependencies when is not dev

[tool.poetry.group.docker.dependencies]
anyio = "^3.7"
asgi-correlation-id = "^4.2"
azure-common = "1.1.28"
azure-core = "1.28.0"
azure-identity = "1.12"
azure-keyvault-secrets = "4.7"
azure-servicebus = "7.8.3"
azure-storage-blob = "12.14.1"
certifi = "^2023.7.22"
cffi = "1.15.1"
charset-normalizer = "2.0.12"
click = "8.0.3"
cryptography = "^41.0.3"
databricks-sql-connector = "2.9.3"
fastapi = "^0.100.1"
gunicorn = "20.1.0"
guvicorn-logger = "0.1.16"
httpx = "0.24.1"
idna = "3.4"
isodate = "0.6.1"
jinja2 = "3.1.2"
msal = "1.22.0"
msal-extensions = "1.0.0"
msrest = "0.7.1"
numpy = "1.24.3"
oauthlib = "3.2.2"
opencensus-ext-azure = "^1.1.9"
orjson = "3.8.12"
pandas = "1.5.3"
polars = {version = "^0.17.6", extras = ["all"]}
portalocker = "2.7.0"
psutil = "5.9.4"
pycparser = "2.21"
pydantic = {version = "^1.10", extras = ["email"]}
pyhumps = "3.8.0"
pyjwt = "2.6.0"
pymongo = "^4.3.3"
pysqlx-engine = "^0.2.21"
python-dateutil = "2.8.2"
python-dotenv = "1"
pytz = "2023.3"
requests-oauthlib = "1.3.1"
rfc3986 = "1.5.0"
six = "1.16.0"
sniffio = "1.3.0"
thrift = "0.16.0"
typing-extensions = "4.5.0"
uamqp = "1.6.3"
urllib3 = "1.26.15"
uvicorn = "0.21.1"
xlrd = "2.0.1"
XlsxWriter = "3.1.2"
googleapis-common-protos = "^1.60.0"
grpcio = "^1.56.2"
requests = "^2.31.0"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipython = "^8.10.0"
isort = "^5.12.0"
markdown-include = "^0.8.1"
mkdocs-material = "^9.0.12"
mkdocs-video = "^1.4.0"
pandas = "^1.5.3"
pylint = "^2.16.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
timebudget = "^0.7.1"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.publish.dependencies]
keyring = "^24.2.0"
artifacts-keyring = "^0.3.2"
twine = "^4.0.2"


[tool.poetry.group.others.dependencies]
animal-case = "^0.5.1"
pyodbc = "^4.0.39"
pymssql = "^2.2.7"
sqlalchemy = "1.4.47"
