# dependencies to publish to Azure Artifacts
[project]
name = "qd-openapi-api"
requires-python = ">=3.10"
version = "0.2.0"
authors = [{name = 'Carlos Rian', email = 'carlos.rian@quartile.com'}]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: FastAPI",
    "Framework :: IPython",
]

dynamic = ["license", "readme", "description", "dependencies", "classifiers"]
description = "OpenAPI API for Quartile, a package for building REST APIs with Python 3.10+."

[tool.setuptools.dynamic]
dependencies = {file = ["requirements-publish.txt"]}

# project dependencies
[tool.poetry]
name = "qd-openapi-api"
version = "0.2.0"
description = "Extenal API Quartile"
authors = ["carlos.rian <carlos.rian@quartile.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# poetry add --group azure azure-common@latest azure-core@latest azure-identity@latest azure-keyvault-secrets@latest azure-servicebus@latest azure-storage-blob@latest
[tool.poetry.group.azure.dependencies]
azure-common = "^1.1.28"
azure-core = "^1.29.5"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
azure-servicebus = "^7.11.4"
azure-storage-blob = "^12.19.0"

# poetry add --group logger asgi-correlation-id@latest guvicorn-logger@latest opencensus-ext-azure@latest
[tool.poetry.group.logger.dependencies]
asgi-correlation-id = "^4.2.0"
guvicorn-logger = "^0.1.16"
opencensus-ext-azure = "^1.1.12"

# poetry add --group dataeng pandas@latest xlrd@latest XlsxWriter@latest numpy@latest
[tool.poetry.group.dataeng.dependencies]
pandas = "^2.1.3"
xlrd = "^2.0.1"
XlsxWriter = "^3.1.9"
python-dotenv = "^1.0.1"

# poetry add --group web pydantic@latest aiohttp@latest fastapi@latest gunicorn@latest uvicorn@latest jinja2@latest orjson@latest httpx@latest pyhumps@latest requests@latest
[tool.poetry.group.web.dependencies]
pydantic = {version = "^1.10.14", extras = ["email"]}
aiohttp = "^3.9.1"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
orjson = "^3.9.10"
httpx = "^0.25.2"
pyhumps = "^3.8.0"
requests = "^2.31.0"

# poetry add --group database databricks-sql-connector@latest pymongo@latest pysqlx-engine@latest motor@latest
uvicorn = {version = "^0.27.0.post1", extras = ["standard"]}
[tool.poetry.group.database.dependencies]
databricks-sql-connector = "^3.0.1"
pymongo = "^4.6.1"
pysqlx-engine = "^0.2.27"
motor = "^3.3.2"

# poetry add --group test black@latest ipython@latest isort@latest markdown-include@latest mkdocs-material@latest mkdocs-video@latest pandas@latest pylint@latest pytest@latest pytest-cov@latest pytest-dotenv@latest timebudget@latest pytest-asyncio@latest 
[tool.poetry.group.test.dependencies]
black = "^23.11.0"
ipython = "^8.18.1"
isort = "^5.12.0"
markdown-include = "^0.8.1"
mkdocs-material = "^9.5.0"
mkdocs-video = "^1.5.0"
pandas = "^2.1.3"
pylint = "^3.0.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
timebudget = "^0.7.1"
pytest-asyncio = "^0.23.2"

# poetry add --group publish keyring@latest artifacts-keyring@latest twine@latest
[tool.poetry.group.publish.dependencies]
keyring = "^24.3.0"
artifacts-keyring = "^0.3.4"
twine = "^4.0.2"


[tool.poetry.group.others.dependencies]
animal-case = "^0.5.1"
pyodbc = "^4.0.39"
pymssql = "^2.2.7"
sqlalchemy = "1.4.47"
