# dependencies to publish to Azure Artifacts
[project]
name = "qd-openapi-api"
requires-python = ">=3.10"
version = "0.2.0"
authors = [{ name = 'Carlos Rian', email = 'carlos.rian@quartile.com' }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: FastAPI",
    "Framework :: IPython",
]

dynamic = ["license", "readme", "description", "dependencies", "classifiers"]
description = "OpenAPI API for Quartile, a package for building REST APIs with Python 3.10+."

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-publish.txt"] }

# project dependencies
[tool.poetry]
name = "qd-openapi-api"
version = "0.2.0"
description = "Extenal API Quartile"
authors = ["carlos.rian <carlos.rian@quartile.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# poetry add --group azure azure-common@latest azure-core@latest azure-identity@latest azure-keyvault-secrets@latest azure-servicebus@latest azure-storage-blob@latest
[tool.poetry.group.azure.dependencies]
azure-common = "1.*"
azure-core = "1.*"
azure-identity = "1.*"
azure-keyvault-secrets = "4.*"
azure-servicebus = "7.*"
azure-storage-blob = "12.*"

# poetry add --group logger asgi-correlation-id@latest guvicorn-logger@latest opencensus-ext-azure@latest
[tool.poetry.group.logger.dependencies]
asgi-correlation-id = "4.3.*"
guvicorn-logger = "^0.1.17"
opencensus-ext-azure = "^1.1.13"

# poetry add --group dataeng pandas@latest xlrd@latest XlsxWriter@latest numpy@latest
[tool.poetry.group.dataeng.dependencies]
pandas = "2.2.*"
databricks-sql-connector = "^3.4.0"

[tool.poetry.group.excel.dependencies]
xlrd = "^2.0.1"
XlsxWriter = "^3.2.0"

# poetry add --group web pydantic@latest aiohttp@latest fastapi@latest gunicorn@latest uvicorn@latest jinja2@latest orjson@latest httpx@latest pyhumps@latest requests@latest
[tool.poetry.group.web.dependencies]
pydantic = "2.*"
aiohttp = "3.11.*"
fastapi = "0.115.*"
gunicorn = "^23.0.0"
jinja2 = "3.*"
orjson = "3.10.*"
httpx = "0.*"
pyhumps = "^3.8.0"
requests = "^2.32.3"
uvicorn = "0.34.*"
idna = "3.*"
ujson = "5.10.*"
python-dotenv = "^1.0.1"

# poetry add --group database databricks-sql-connector@latest pymongo@latest pysqlx-engine@latest motor@latest
[tool.poetry.group.database.dependencies]
pymongo = "^4.9"
pysqlx-engine = "^0.3"
motor = "^3.6"

# poetry add --group test black@latest ipython@latest isort@latest markdown-include@latest mkdocs-material@latest mkdocs-video@latest pandas@latest pylint@latest pytest@latest pytest-cov@latest pytest-dotenv@latest timebudget@latest pytest-asyncio@latest 
[tool.poetry.group.test.dependencies]
black = "^24.8.0"
ipython = "^8.31.0"
isort = "^5.13.2"
markdown-include = "^0.8.1"
mkdocs-material = "^9.5.50"
mkdocs-video = "^1.5.0"
pylint = "^3.3"
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-dotenv = "^0.5"
timebudget = "^0.7"
pytest-asyncio = "^0.25"

# poetry add --group publish keyring@latest artifacts-keyring@latest twine@latest
[tool.poetry.group.publish.dependencies]
keyring = "25.*"
artifacts-keyring = "0.4.*"
twine = "^6.0.1"


[tool.poetry.group.others.dependencies]
# animal-case = "^0.5.1"
pyodbc = "5.2.*"
pymssql = "^2.3.1"
sqlalchemy = "1.4.51"

[tool.poetry.group.proposal.dependencies]
python-pptx = "^1.0.2"
python-pptx-text-replacer = "^0.0.6"
